syntax = "proto3";

package blog;

option go_package = ".;blog";

service BlogService {
  rpc GetAllBlogs(GetBlogsRequest) returns (GetBlogsResponse);
}

message GetBlogsRequest {
  // Možeš dodati paginaciju, filtere itd.
}

message Blog {
  string id = 1;
  string title = 2;
  string description = 3;
  string author = 4;
  string created_at = 5;
  int32 likes_count = 6;
  int32 comments_count = 7;
}

message GetBlogsResponse {
  repeated Blog blogs = 1;
  int32 total_count = 2;
}